<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_modify_mydata"
            android:icon="@drawable/ic_baseline_person_search_24"
            android:title="@string/menu_modify_mydata" />
        <item
            android:id="@+id/nav_QR"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="@string/menu_QR" />
        <item
            android:id="@+id/nav_destination_visited"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/menu_destinations_visited" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/menu_bookmark" />
    </group>

    <item android:title="앱 관리">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_error_report"
                android:icon="@drawable/ic_baseline_error_outline_24"
                android:title="@string/menu_error_report" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_backspace_24"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>